tailorbird-task/force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <displayFormat>JOB-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>