tailorbird-task/force-app/main/default/objects/Job__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <description>Commission for the job is 10 percent of the total value of all deliveries.</description>
    <formula>Total_Value__c * ( $CustomMetadata.System_Settings__mdt.Default_Setting.Commission_Percent__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>