tailorbird-task/force-app/main/default/objects/Job__c/fields/Delivery_Person__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Person</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Job</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>