tailorbird-task/force-app/main/default/objects/Job__c/fields/Total_Payout__c.field-meta.xml
<CustomField>
    <fullName>Total_Payout__c</fullName>
    <description>Represents the amount earned by the delivery person. Sum of commission and tips for all deliveries.</description>
    <formula>Commission__c +  Total_Tip_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>