tailorbird-task/force-app/main/default/objects/Job__c/fields/Total_Tip_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Tip_Value__c</fullName>
    <description>Sum of the tips of all the deliveries in the job.</description>
    <label>Total Tip Value</label>
    <summarizedField>Delivery__c.Tip__c</summarizedField>
    <summaryFilterItems>
        <field>Delivery__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Delivery__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>