tailorbird-task/force-app/main/default/objects/Job__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <description>Sum of all the cost of deliveries</description>
    <label>Total Value</label>
    <summarizedField>Delivery__c.Cost__c</summarizedField>
    <summaryForeignKey>Delivery__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>